OSL 2025 - split the b2b & combined acts

--- a/lineups/osl_2025.yaml
+++ b/lineups/osl_2025.yaml
@@ -11,7 +11,8 @@ days:
       - name: Hozier
       - name: Doja Cat
       - name: John Summit
-      - name: Anderson .Paak & The Free Nationals
+      - name: Anderson .Paak
+      - name: Free Nationals
       - name: Vampire Weekend
       - name: Glass Animals
       - name: Gracie Abrams
@@ -35,7 +36,8 @@ days:
       - name: Bakar
       - name: flipturn
       - name: 2hollis
-      - name: Julien Baker & TORRES
+      - name: Julien Baker
+      - name: TORRES
       - name: Fujii Kaze
       - name: BUNT.
       - name: Levity
@@ -47,9 +49,8 @@ days:
       - name: CA7RIEL & Paco Amoroso
       - name: julie
       - name: Mayer Hawthorne
-      - name: DJ Pee .Wee
       - name: Wasia Project
-      - name: Big Freedia with SF Gay Men's Chorus
+      - name: Big Freedia
       - name: Fcukers
       - name: Klangphonics
       - name: Vansire
@@ -97,7 +98,8 @@ days:
       - name: Dombresky
       - name: Claptone
       - name: NOTION
-      - name: Girl Math (VNSSA b2b Nala)
+      - name: VNSSA
+      - name: Nala
       - name: TxC
       - name: ATRIP
       - name: Baalti
