Tweak naming osl 2025

--- a/lineups/osl_2025.yaml
+++ b/lineups/osl_2025.yaml
@@ -5,7 +5,7 @@ year: 2025
 days:
   - number: 1
     date: 2025-08-08
-    display_name: Main Festival
+    display_name: Main Lineup
     artists:
       - name: Tyler, The Creator
       - name: Hozier
