Update Bonnaroo 2025 Lineup
Fix another typo, add Damiano David (added to lineup Mar. 26)

--- a/lineups/bonnaroo_2025.yaml
+++ b/lineups/bonnaroo_2025.yaml
@@ -11,7 +11,7 @@ days:
       - name: DOM DOLLA
       - name: SAMMY VIRJI
       - name: MARCUS KING
-      - name: GREENN VELVET
+      - name: GREEN VELVET
       - name: 2HOLLIS
       - name: INSANE CLOWN POSSE
       - name: JOEY VALENCE & BRAE
@@ -53,6 +53,7 @@ days:
       - name: OF THE TREES
       - name: JPEGMAFIA
       - name: MARINA
+      - name: DAMIANO DAVID
       - name: TAPE B
       - name: MJ LENDERMAN
       - name: BOSSMAN DLOW
