Add URI to Bonnaroo 2025 Lineup for Nelly
Add URI for Nelly

--- a/lineups/bonnaroo_2025.yaml
+++ b/lineups/bonnaroo_2025.yaml
@@ -85,6 +85,7 @@ days:
       - name: JUSTICE
         spotify_uri: 1gR0gsQYfi6joyO1dlp76N
       - name: NELLY
+        spotify_uri: 2gBjLmx6zQnFGQJCAQpRgw
       - name: GLORILLA
       - name: MT. JOY
       - name: RL GRIME
