Clean up glasto changes

--- a/lineups/glasto_2025.yaml
+++ b/lineups/glasto_2025.yaml
@@ -20,7 +20,7 @@ days:
       - name: WET LEG
       - name: INHALER
       - name: RIZZLE KICKS
-      - name: FABIO & GROOVERIDER AND THE OUTLOOK ORCHESTRA
+      - name: FABIO & GROOVERIDER
       - name: MARIBOU STATE
       - name: BADBADNOTGOOD
       - name: DENZEL CURRY
@@ -69,7 +69,8 @@ days:
       - name: JASMINE.4.T
       - name: GURRIERS
       - name: THE MEFFS
-      - name: JOB JOBSE B2B PALMS TRAX
+      - name: JOB JOBSE
+      - name: PALMS TRAX
       - name: ROMY
       - name: SONNY FODERA
       - name: DRAGONFLY SHOW
@@ -80,7 +81,7 @@ days:
     date: 2025-06-28
     display_name: Day 2
     artists:
-      - name: NEIL YOUNG AND THE CHROME HEARTS
+      - name: NEIL YOUNG
       - name: RAYE
       - name: PATCHWORK
       - name: JOHN FOGERTY
@@ -143,11 +144,13 @@ days:
       - name: THE GUEST LIST
       - name: CHLOE SLATER
       - name: GIRLBAND!
-      - name: GROOVE ARMADA B2B JUNGLE (DJ SET)
-      - name: ANNIE MAC B2B JAMZ SUPERNOVA
+      - name: GROOVE ARMADA
+      - name: ANNIE MAC
+      - name: JAMZ SUPERNOVA
       - name: FOUR TET
       - name: DRAGONFLY SHOW
-      - name: MICHAEL BIBI B2B SOLOMUN
+      - name: MICHAEL BIBI
+      - name: SOLOMUN
       - name: HANNAH WANTS
       - name: DANNY HOWARD
       - name: BECKY HILL
@@ -157,7 +160,8 @@ days:
     artists:
       - name: OLIVIA RODRIGO
       - name: NOAH KAHAN
-      - name: NILE RODGERS & CHIC
+      - name: NILE RODGERS
+      - name: CHIC
       - name: ROD STEWART
       - name: THE LIBERTINES
       - name: CELESTE
@@ -176,7 +180,7 @@ days:
       - name: GOAT
       - name: BLACK UHURU
       - name: CYMANDE
-      - name: ABEL SELAOCOE & THE BANTU ENSEMBLE
+      - name: ABEL SELAOCOE
       - name: THANDII
       - name: JORJA SMITH
       - name: AJ TRACEY
@@ -196,14 +200,14 @@ days:
       - name: MELIN MELYN
       - name: ROY HARPER
       - name: THE BOOTLEG BEATLES
-      - name: RHIANNON GIDDENS WITH DIRK POWELL
+      - name: RHIANNON GIDDENS
       - name: LONDON COMMUNITY GOSPEL CHOIR
       - name: PP ARNOLD
       - name: THE RIPTIDE MOVEMENT
       - name: MICHELE STODART
       - name: THE HENRY GIRLS
       - name: TOBY LEE
-      - name: DAWN LANDES & FRIENDS PERFORM THE LIBERATED WOMAN’S SONGBOOK
+      - name: DAWN LANDES
       - name: ALABAMA 3
       - name: BEAR'S DEN
       - name: SAM RYDER
@@ -218,11 +222,14 @@ days:
       - name: RED RUM CLUB
       - name: DU BLONDE
       - name: THE HALFWAY KID
-      - name: BASSLAYERZ B2B BORN ON ROAD
-      - name: SHY FX B2B EATS EVERYTHING
+      - name: BASSLAYERZ
+      - name: BORN ON ROAD
+      - name: SHY FX
+      - name: EATS EVERYTHING
       - name: BRU-C
       - name: DRAGONFLY SHOW
       - name: GIRLS DONT SYNC
-      - name: DR BANANA B2B GALLEGOS
+      - name: DR BANANA
+      - name: GALLEGOS
       - name: EVA LAZARUS
       - name: JEREMIAH ASIAMAH
