--- a/lineups/osl_2025.yaml
+++ b/lineups/osl_2025.yaml
@@ -5,87 +5,112 @@ year: 2025
 days:
   - number: 1
     date: 2025-08-08
-    display_name: Main Lineup
+    display_name: Day 1
     artists:
-      - name: Tyler, The Creator
-      - name: Hozier
       - name: Doja Cat
       - name: John Summit
-      - name: Anderson .Paak
-      - name: Free Nationals
-      - name: Vampire Weekend
-      - name: Glass Animals
-      - name: Gracie Abrams
-      - name: Jamie xx
+      - name: Beck
       - name: Doechii
-      - name: Gesaffelstein
-      - name: Bleachers
-      - name: Ludacris
-      - name: Jorja Smith
       - name: Still Woozy
-      - name: Sammy Virji
       - name: Thundercat
-      - name: Wallows
-      - name: FINNEAS
       - name: MARINA
-      - name: Royel Otis
-      - name: ARMNHMR
       - name: ROLE MODEL
-      - name: Artemas
-      - name: BigXthaPlug
-      - name: Bakar
-      - name: flipturn
-      - name: 2hollis
-      - name: Julien Baker
-      - name: TORRES
+      - name: ARMNHMR
+      - name: Floating Points
+      - name: Nico Moreno
       - name: Fujii Kaze
       - name: BUNT.
-      - name: Levity
       - name: Mark Ambor
       - name: Jessica Pratt
       - name: Mannequin Pussy
-      - name: Rebecca Black
-      - name: LaRussell
-      - name: CA7RIEL & Paco Amoroso
-      - name: julie
-      - name: Mayer Hawthorne
-      - name: Wasia Project
-      - name: Big Freedia
+      - name: NOTION
       - name: Fcukers
-      - name: Klangphonics
       - name: Vansire
-      - name: nimino
-      - name: Kate Bollinger
-      - name: Hope Tala
       - name: Destroy Boys
-      - name: Luna Li
       - name: INJI
+      - name: The Two Lips
+      - name: nimino
+      - name: ATRIP
+      - name: Midrift
+      - name: almost monday
+      - name: Alexandra Savior
+      - name: NewDad
+      - name: Baalti
+      - name: Alemeda
+      - name: AVATARI
+  - number: 2
+    date: 2025-08-09
+    display_name: Day 2
+    artists:
+      - name: Tyler, The Creator
+      - name: Vampire Weekend
+      - name: Gracie Abrams
+      - name: Gesaffelstein
+      - name: Ludacris
+      - name: Wallows
+      - name: Royel Otis
+      - name: Claude VonStroke
+      - name: Artemas
+      - name: Bakar
+      - name: flipturn
+      - name: 2hollis
+      - name: Walker & Royce
+      - name: Dombresky
+      - name: LaRussell
+      - name: VNSSA
+      - name: Nala
+      - name: Wasia Project
+      - name: Klangphonics
+      - name: Kate Bollinger
       - name: Sarah Kinsley
       - name: Matt Champion
-      - name: Naomi Sharon
-      - name: Neal Francis
       - name: Wunderhorse
-      - name: Lexa Gates
       - name: Amelia Moore
       - name: Paco Versailles
       - name: Good Neighbours
-      - name: Orla Gartland
-      - name: Midrift
-      - name: Bay Ledges
       - name: The Army, The Navy
+      - name: Bay Ledges
+      - name: DJ Mandy
+      - name: Roi Turbo
+      - name: Vincent Lima
+  - number: 3
+    date: 2025-08-10
+    display_name: Day 3
+    artists:
+      - name: Hozier
+      - name: Anderson .Paak & The Free Nationals
+      - name: Glass Animals
+      - name: Jamie xx
+      - name: Bleachers
+      - name: Jorja Smith
+      - name: Black Coffee
+      - name: Sammy Virji
+      - name: FINNEAS
+      - name: BigXthaPlug
+      - name: Levity
+      - name: BLOND:ISH
+      - name: Claptone
+      - name: Rebecca Black
+      - name: CA7RIEL & Paco Amoroso
+      - name: julie
+      - name: Mayer Hawthorne
+      - name: Big Freedia
+      - name: Hope Tala
+      - name: Luna Li
+      - name: "&friends"
+      - name: Naomi Sharon
+      - name: Neal Francis
+      - name: Lexa Gates
+      - name: TxC
+      - name: Orla Gartland
       - name: Arcy Drive
       - name: Nourished by Time
-      - name: almost monday
       - name: bLAck pARty
-      - name: Alexandra Savior
-      - name: Vincent Lima
-      - name: NewDad
-      - name: Alemeda
       - name: Midnight Generation
       - name: Alex Amen
-      - name: AVATARI
-
-  - number: 2
+      - name: Cassandra Coleman
+      - name: BANKSIA
+  - number: 4
     date: 2025-08-08
     display_name: SOMA
     artists:
