Fix newline for role model acl 2025

--- a/lineups/acl_2025.yaml
+++ b/lineups/acl_2025.yaml
@@ -20,7 +20,8 @@ days:
       - name: EMPIRE OF THE SUN
       - name: DJO
       - name: MK.GEE
-      - name: POLO & PAN ROLE MODEL
+      - name: POLO & PAN
+      - name: ROLE MODEL
       - name: RAINBOW KITTEN SURPRISE
       - name: WET LEG
       - name: DR. DOG
