Switch doja for killers acl 2025

--- a/lineups/acl_2025.yaml
+++ b/lineups/acl_2025.yaml
@@ -9,7 +9,7 @@ days:
     artists:
       - name: Sabrina Carpenter
       - name: Hozier
-      - name: Doja Cat
+      - name: The Killers
       - name: Luke Combs
       - name: The Strokes
       - name: John Summit
