Fix bottlerock 2026 lineup

--- a/lineups/bottlerock_2026.yaml
+++ b/lineups/bottlerock_2026.yaml
@@ -8,8 +8,7 @@ days:
     display_name: Full Festival
     artists:
       - name: FOO FIGHTERS
-      - name: BAG STREET
-      - name: BOYS
+      - name: BACK STREET BOYS
       - name: LORDE
       - name: TEDDY SWIMS
       - name: LCD
